/*
 * Backpack - Skyscanner's Design System
 *
 * Copyright 2016 Skyscanner Ltd
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *   http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
/* @flow strict */

import React from 'react';
import { render } from '@testing-library/react';

import BpkCarousel from './BpkCarousel';

describe('BpkCarousel', () => {
  it('should render correctly', () => {
    const { asFragment } = render(<BpkCarousel />);
    expect(asFragment()).toMatchSnapshot();
  });

  it('should support custom class names', () => {
    const { asFragment } = render(<BpkCarousel className="custom-classname" />);
    expect(asFragment()).toMatchSnapshot();
  });

  it('should support infinite', () => {
    const { asFragment } = render(<BpkCarousel infinite={false} />);
    expect(asFragment()).toMatchSnapshot();
  });

  it('should support children', () => {
    const { asFragment } = render(
      <BpkCarousel infinite={false}>
        <span>slide 1</span>
        <span>slide 2</span>
      </BpkCarousel>,
    );
    expect(asFragment()).toMatchSnapshot();
  });

  it('should support showIndicator', () => {
    const { asFragment } = render(<BpkCarousel showIndicator={false} />);
    expect(asFragment()).toMatchSnapshot();
  });

  it('should support arbitrary props', () => {
    const { asFragment } = render(<BpkCarousel testid="123" />);
    expect(asFragment()).toMatchSnapshot();
  });
});
